--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="missing_flight_info_message">Please select a flight origin, and a valid date or date range.</string>
     <!-- Clear dates -->
     <string name="clear_dates">Clear dates</string>
+    <!-- Search Now -->
+    <string name="search_now">Search Now</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
